--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
             <version>3.24.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.javalin</groupId>
+            <artifactId>javalin</artifactId>
+            <version>6.6.0</version>
+        </dependency>
     </dependencies>
 
     <build>
